{
  "version": 4,
  "terraform_version": "1.14.8",
  "serial": 281,
  "lineage": "222b8d34-64de-96bf-3c7b-ed0e96c03cc9",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "THIS_ALB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:106295460257:loadbalancer/app/three-tier-alb/55df6a722b082960",
            "arn_suffix": "app/three-tier-alb/55df6a722b082960",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "three-tier-alb-461512108.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:106295460257:loadbalancer/app/three-tier-alb/55df6a722b082960",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "three-tier-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-002e46f5723012162"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00466d1f126a8bf06"
              },
              {
                "subnet_id": "subnet-091d0dd478b0b0386"
              }
            ],
            "subnets": [
              "subnet-00466d1f126a8bf06",
              "subnet-091d0dd478b0b0386"
            ],
            "tags": {
              "Name": "three-tier-alb"
            },
            "tags_all": {
              "Name": "three-tier-alb"
            },
            "vpc_id": "vpc-0e42dfbceff1d9822",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_group.aws_security_group.THIS_ALB",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.THIS_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "THIS_LISTNERS",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:106295460257:listener/app/three-tier-alb/55df6a722b082960/e335c8840233f8e5",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:106295460257:targetgroup/three-tier-tg/19a513483d91ad0f",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:106295460257:listener/app/three-tier-alb/55df6a722b082960/e335c8840233f8e5",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:106295460257:loadbalancer/app/three-tier-alb/55df6a722b082960",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.alb.aws_lb.THIS_ALB",
            "module.alb.aws_lb_target_group.THIS_TG",
            "module.security_group.aws_security_group.THIS_ALB",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.THIS_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "THIS_TG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:106295460257:targetgroup/three-tier-tg/19a513483d91ad0f",
            "arn_suffix": "targetgroup/three-tier-tg/19a513483d91ad0f",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:106295460257:targetgroup/three-tier-tg/19a513483d91ad0f",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-south-1:106295460257:loadbalancer/app/three-tier-alb/55df6a722b082960"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "three-tier-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "three-tier-tg"
            },
            "tags_all": {
              "Name": "three-tier-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0e42dfbceff1d9822"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.THIS_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "THIS_ALB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:106295460257:security-group/sg-002e46f5723012162",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-002e46f5723012162",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ecs-three-tier-alb-sg",
            "name_prefix": "",
            "owner_id": "106295460257",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ecs-three-tier-alb-sg"
            },
            "tags_all": {
              "Name": "ecs-three-tier-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e42dfbceff1d9822"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.THIS_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "THIS_ECS",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:106295460257:security-group/sg-03ef4dd6d1fc421ca",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03ef4dd6d1fc421ca",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-002e46f5723012162"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ecs-three-tier-ecs-sg",
            "name_prefix": "",
            "owner_id": "106295460257",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ecs-three-tier-ecs-sg"
            },
            "tags_all": {
              "Name": "ecs-three-tier-ecs-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e42dfbceff1d9822"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_group.aws_security_group.THIS_ALB",
            "module.vpc.aws_vpc.THIS_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "THIS_RDS",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:106295460257:security-group/sg-0385d75f6b67c7d35",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0385d75f6b67c7d35",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03ef4dd6d1fc421ca"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "ecs-three-tier-rds-sg",
            "name_prefix": "",
            "owner_id": "106295460257",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ecs-three-tier-rds-sg"
            },
            "tags_all": {
              "Name": "ecs-three-tier-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e42dfbceff1d9822"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_group.aws_security_group.THIS_ALB",
            "module.security_group.aws_security_group.THIS_ECS",
            "module.vpc.aws_vpc.THIS_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-090f5d91e13f0ac0f",
            "arn": "arn:aws:ec2:ap-south-1:106295460257:elastic-ip/eipalloc-090f5d91e13f0ac0f",
            "association_id": "eipassoc-0f766846111f85135",
            "domain": "vpc",
            "id": "eipalloc-090f5d91e13f0ac0f",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-004e1ce78f014a27b",
            "private_dns": "ip-10-0-1-85.ap-south-1.compute.internal",
            "private_ip": "10.0.1.85",
            "public_dns": "ec2-35-154-161-177.ap-south-1.compute.amazonaws.com",
            "public_ip": "35.154.161.177",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "ecs-three-tier-eip"
            },
            "tags_all": {
              "Name": "ecs-three-tier-eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "THIS_IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:106295460257:internet-gateway/igw-0b03cfac55f3aca23",
            "id": "igw-0b03cfac55f3aca23",
            "owner_id": "106295460257",
            "tags": {
              "Name": "ecs-three-tier-igw"
            },
            "tags_all": {
              "Name": "ecs-three-tier-igw"
            },
            "vpc_id": "vpc-0e42dfbceff1d9822"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.THIS_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "THIS_NAT_GW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-090f5d91e13f0ac0f",
            "association_id": "eipassoc-0f766846111f85135",
            "connectivity_type": "public",
            "id": "nat-069e4b2dd4ff26719",
            "network_interface_id": "eni-004e1ce78f014a27b",
            "private_ip": "10.0.1.85",
            "public_ip": "35.154.161.177",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-00466d1f126a8bf06",
            "tags": {
              "Name": "ecs-three-tier-nat"
            },
            "tags_all": {
              "Name": "ecs-three-tier-nat"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.THIS_IGW",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.THIS_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:106295460257:route-table/rtb-0460799bc4f56ffa3",
            "id": "rtb-0460799bc4f56ffa3",
            "owner_id": "106295460257",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-069e4b2dd4ff26719",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ecs-three-tier-private-rt"
            },
            "tags_all": {
              "Name": "ecs-three-tier-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e42dfbceff1d9822"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.THIS_IGW",
            "module.vpc.aws_nat_gateway.THIS_NAT_GW",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.THIS_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:106295460257:route-table/rtb-0407206f771d5869f",
            "id": "rtb-0407206f771d5869f",
            "owner_id": "106295460257",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b03cfac55f3aca23",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ecs-three-tier-public-rt"
            },
            "tags_all": {
              "Name": "ecs-three-tier-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e42dfbceff1d9822"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.THIS_IGW",
            "module.vpc.aws_vpc.THIS_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-073aab1b4356f4828",
            "route_table_id": "rtb-0460799bc4f56ffa3",
            "subnet_id": "subnet-076be6db9c44ccf0a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.THIS_IGW",
            "module.vpc.aws_nat_gateway.THIS_NAT_GW",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private_app",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.THIS_VPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02c6c86a9c6d42d3b",
            "route_table_id": "rtb-0460799bc4f56ffa3",
            "subnet_id": "subnet-0ebc48e193ce34b21"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.THIS_IGW",
            "module.vpc.aws_nat_gateway.THIS_NAT_GW",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private_app",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.THIS_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0215254bf6ad33b7f",
            "route_table_id": "rtb-0460799bc4f56ffa3",
            "subnet_id": "subnet-081bb812f28b5e4cf"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.THIS_IGW",
            "module.vpc.aws_nat_gateway.THIS_NAT_GW",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private_db",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.THIS_VPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bbc03a23179a2376",
            "route_table_id": "rtb-0460799bc4f56ffa3",
            "subnet_id": "subnet-0fe53320f9e915dfc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.THIS_IGW",
            "module.vpc.aws_nat_gateway.THIS_NAT_GW",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private_db",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.THIS_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09f92e7f1fb646387",
            "route_table_id": "rtb-0407206f771d5869f",
            "subnet_id": "subnet-00466d1f126a8bf06"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.THIS_IGW",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.THIS_VPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-019372bcdf186759b",
            "route_table_id": "rtb-0407206f771d5869f",
            "subnet_id": "subnet-091d0dd478b0b0386"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.THIS_IGW",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.THIS_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:106295460257:subnet/subnet-076be6db9c44ccf0a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-076be6db9c44ccf0a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "106295460257",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ecs-three-tier-private-app-1"
            },
            "tags_all": {
              "Name": "ecs-three-tier-private-app-1"
            },
            "vpc_id": "vpc-0e42dfbceff1d9822"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.THIS_VPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:106295460257:subnet/subnet-0ebc48e193ce34b21",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ebc48e193ce34b21",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "106295460257",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ecs-three-tier-private-app-2"
            },
            "tags_all": {
              "Name": "ecs-three-tier-private-app-2"
            },
            "vpc_id": "vpc-0e42dfbceff1d9822"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.THIS_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:106295460257:subnet/subnet-081bb812f28b5e4cf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-081bb812f28b5e4cf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "106295460257",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ecs-three-tier-private-db-1"
            },
            "tags_all": {
              "Name": "ecs-three-tier-private-db-1"
            },
            "vpc_id": "vpc-0e42dfbceff1d9822"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.THIS_VPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:106295460257:subnet/subnet-0fe53320f9e915dfc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fe53320f9e915dfc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "106295460257",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ecs-three-tier-private-db-2"
            },
            "tags_all": {
              "Name": "ecs-three-tier-private-db-2"
            },
            "vpc_id": "vpc-0e42dfbceff1d9822"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.THIS_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:106295460257:subnet/subnet-00466d1f126a8bf06",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00466d1f126a8bf06",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "106295460257",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ecs-three-tier-public-1"
            },
            "tags_all": {
              "Name": "ecs-three-tier-public-1"
            },
            "vpc_id": "vpc-0e42dfbceff1d9822"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.THIS_VPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:106295460257:subnet/subnet-091d0dd478b0b0386",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-091d0dd478b0b0386",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "106295460257",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ecs-three-tier-public-2"
            },
            "tags_all": {
              "Name": "ecs-three-tier-public-2"
            },
            "vpc_id": "vpc-0e42dfbceff1d9822"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.THIS_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "THIS_VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:106295460257:vpc/vpc-0e42dfbceff1d9822",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-056ff6660980f3f02",
            "default_route_table_id": "rtb-03f333aacde15d623",
            "default_security_group_id": "sg-0bb90c2c8cf2c3e9d",
            "dhcp_options_id": "dopt-0b7ae5ee0d782c768",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e42dfbceff1d9822",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03f333aacde15d623",
            "owner_id": "106295460257",
            "tags": {
              "Name": "ecs-three-tier-vpc"
            },
            "tags_all": {
              "Name": "ecs-three-tier-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}